# xquic_fec

./: .gitignore  CMakeLists.txt  README.md  compare_camera_demo.sh  run_camera_demo.sh  server_ec.crt  server_ec.key
experiments/: CURRENT_BLOCKER.md  EXPERIMENT_DESIGN.md  QUICKSTART.md  README.md
experiments/network_profiles/: baseline.profile  challenging.profile  high_latency_50ms.profile  limited_bandwidth.profile  packet_loss_10pct.profile  packet_loss_2pct.profile  packet_loss_5pct.profile
experiments/results/: .gitignore
experiments/scripts/: batch_test.sh  cleanup_network.sh  quick_demo.sh  run_experiment.sh  setup_network.sh  test_dummynet.sh  test_udp_delay.sh  test_udp_loss.sh
experiments/tools/: analyze_results.py
src/: camera_client.c  camera_server.c  dual_player.c  main.c  stream_protocol.h
study_note/: README.md  development_summary.md  xquic_advantages.md  xquic_fec_deep_dive.md  xquic_fec_visual_guide.md
tools/: analyze_results.py  test_packet_loss.py
